--- a/example/index.html
+++ b/example/index.html
@@ -20,17 +20,16 @@
     }
     .presentation {
       position: absolute;
-      width: 95%;
-      height: 90%;
-      left: 50%;
-      top: 20%;
-      transform: translate(-50%, -20%);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
     .pane {
       overflow-y: auto;
       overflow-x: hidden;
-      border: 1px solid #222430;
-      background-color: #282a36;
+      border: 1px solid #23241f;
+      background-color: #23241f;
       box-sizing: border-box;
       width: 50%;
       height: 100%;
