--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/languages/elm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/languages/elixir.min.js"></script>
     <script src="elm.js"></script>
+    <script src="worker.js"></script>
   </head>
   <body>
     <noscript>
@@ -21,20 +22,6 @@
     </noscript>
     <div id="error-dialog"></div>
     <div id="root"></div>
-    <script>
-    var app = Elm.Main.embed(document.getElementById('root'));
-window.onerror = (errorMsg, url, lineNumber) => {
-  setTimeout(() => {
-    const split = errorMsg.split('The message provided by the code author is:');
-    if (split.length == 2) {
-      document.getElementById('error-dialog').innerText = split[1];
-    }
-  }, 30);
-  return false;
-};
-window.onkeydown = () => {
-  document.getElementById('error-dialog').innerText = '';
-};
-</script>
+    <script src="index.js"></script>
   </body>
 </html>
